# nyuctf_agents_craken

./: .gitattributes  .gitignore  README.md  database.py  db_list.md  docker-compose.yml  pyproject.toml  rag_agent.py  rag_config.py  requirements.txt  retrieval.py  setup.sh  writeup_preprocess.py
config/: rag_config.yaml  rag_config_graph.yaml
config/prompts/: extract.yaml  extractor.yaml  rag.yaml  ragagent.yaml  search.yaml
ctfrag/: __main__.py  backends.py  config.py  console.py  database.py  decomposer.py  extractor.py  qformatter.py  rag.py  rag_agent.py  rag_config.py  ragflow.py  retrieval.py  retriever.py  search.py  test.py  test_db.py  utils.py
ctfrag/algorithms/: base.py  classic_rag.py  graphrag.py  selfrag.py
ctfrag/db_backend/: base.py  milvus.py  neo4j.py  weaviate.py
dataset/: CyberNative_Code_Vulnerability_Security_DPO.csv  chYassine_WebAttack_CVSSMetrics.csv  claudios_VulDeePecker.csv  dia_bench_DIA_Bench.csv  patched_codes_static_analysis_eval.csv
dataset/processed_writeups/: 2023_0ByteCTF 2023_Gambar Ajaib_processed.md  2023_0ByteCTF 2023_Guestbook (Beta)_processed.md  2023_0ByteCTF 2023_Just Explore!_processed.md  2023_0ByteCTF 2023_One of the greatest matches of all time!_processed.md  2023_0ByteCTF 2023_Romeo and Dulliet_processed.md  2023_0ByteCTF 2023_Token_processed.md  2023_0ByteCTF 2023_Who the Hack_processed.md  2023_0ByteCTF 2023_the Injection_processed.md  2023_0xL4ugh CTF 2023_Colorful_processed.md  2023_0xL4ugh CTF 2023_El bes_processed.md  2023_0xL4ugh CTF 2023_XSS 1_processed.md  2023_0xL4ugh CTF 2023_bypasser_processed.md  2023_1337UP LIVE CTF_Bug Bank_processed.md  2023_1337UP LIVE CTF_Keyless_processed.md  2023_1337UP LIVE CTF_Leeky Comics_processed.md  2023_1337UP LIVE CTF_Pizza Time_processed.md  2023_1337UP LIVE CTF_PyJail_processed.md  2023_1337UP LIVE CTF_Really Secure Apparently_processed.md  2023_1337UP LIVE CTF_Triage Bot_processed.md  2023_24h@CTF 2023_Blue's Clues 1 Gitlab Server_processed.md  2023_24h@CTF 2023_Blue's Clues 2 Source User_processed.md  2023_24h@CTF 2023_Blue's Clues 3 Source IP_processed.md  2023_24h@CTF 2023_Blue's Clues 4 Source Machine_processed.md  2023_24h@CTF 2023_Blue's Clues 5 Initial Access_processed.md  2023_24h@CTF 2023_Blue's Clues 6 Discovery_processed.md  2023_24h@CTF 2023_Blue's Clues 7 Tunnel_processed.md  2023_24h@CTF 2023_Blue's Clues 8 C2_processed.md  2023_24h@CTF 2023_Preparation - Adipol Lipidex 32mg_processed.md  2023_ASC Cyber Wargames Qualification 2023_Catch The Scammer_processed.md  2023_ASC Cyber Wargames Qualification 2023_Father's Light_processed.md  2023_ASC Cyber Wargames Qualification 2023_Palestine Operation_processed.md  2023_ASC Cyber Wargames Qualification 2023_SadQL_processed.md  2023_ASC Cyber Wargames Qualification 2023_Track a coin from your crypto O valley of plenty_processed.md  2023_ASC Cyber Wargames Qualification 2023_We have a new contract for you_processed.md  2023_AmateursCTF 2023_Archived_processed.md  2023_AmateursCTF 2023_Censorship Lite_processed.md  2023_AmateursCTF 2023_Censorship_processed.md  2023_AmateursCTF 2023_You get extra information 2_processed.md  2023_AmateursCTF 2023_funny factorials_processed.md  2023_AmateursCTF 2023_go-gopher_processed.md  (+480 more)
