[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctfrag"
version = "0.1"
authors = [
  { name="NYU CTF", email="nyuctf@gmail.com" },
  { name="Minghao Shao", email="shao.minghao@nyu.edu" },
]
description = "Official package for CTFRAG works with LLM CTF Agent with NYU CTF Bench"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch",
  "transformers",
  "accelerate",
  "bitsandbytes",
  "langchain",
  "sentence-transformers",
  "openpyxl",
  "pacmap",
  "datasets",
  "overrides",
  "langchain-community",
  "langchain-huggingface",
  "langchain-openai",
  "langchain-anthropic",
  "langchain-weaviate",
  "ragatouille",
  "rank-llm",
  "weaviate-client",
  "pymilvus",
  "langgraph",
  "langchain_milvus",
  "rank_llm",
  "ragflow-sdk",
  "pandas",
  "pyyaml",
  "llama-index",
  "llama-parse",
  "pydantic",
  "unstructured[all-docs]",
]

[tool.hatch.build.targets.wheel]
packages = ["ctfrag"]
