[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctfrag"
version = "0.1"
authors = [
  { name="NYU CTF", email="nyuctf@gmail.com" },
  { name="Minghao Shao", email="shao.minghao@nyu.edu" },
]
description = "Official package for CTFRAG works with LLM CTF Agent with NYU CTF Bench"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch",
  "transformers",
  "accelerate",
  "bitsandbytes",
  "langchain",
  "sentence-transformers",
  "openpyxl",
  "pacmap",
  "datasets",
  "overrides",
  "langchain-community",
  "langchain-huggingface",
  "langchain-openai",
  "langchain-anthropic",
  "ragatouille",
  "rank-llm",
  "weaviate-client",
  "pymilvus==2.5.5",
  "langgraph",
  "langchain_milvus==0.1.8",
  "rank_llm",
  "pandas",
  "pyyaml",
  "pydantic",
  "unstructured[all-docs]",
  "readability-lxml",
  "duckduckgo-search",
  "lxml-html-clean",
  "neo4j",
  "langchain_neo4j",
  "langchain-together",
  "langchain-google-genai",
  "google-ai-generativelanguage==0.6.15",
  "colorama",
  "langchain_experimental"
]

[tool.hatch.build.targets.wheel]
packages = ["ctfrag"]
